Start implementing a simple write and read feature
