# source/lib/app/Http/Controllers/MessageApi.php
@@ -1,0 +1,72 @@
+<?php
+
+/**
+ * Stink Reporter
+ * Report when and where it stinks and query for past stinks.
+ *
+ * The version of the OpenAPI document: 0.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+namespace App\Http\Controllers;
+
+use Illuminate\Support\Facades\Request;
+
+class MessageApi extends Controller
+{
+    /**
+     * Constructor
+     */
+    public function __construct()
+    {
+    }
+
+    /**
+     * Operation getMessages
+     *
+     * .
+     *
+     *
+     * @return Http response
+     */
+    public function getMessages()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+
+        return response('How about implementing getMessages as a get method ?');
+    }
+    /**
+     * Operation postNewMessage
+     *
+     * .
+     *
+     *
+     * @return Http response
+     */
+    public function postNewMessage()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+        if (!isset($input['message'])) {
+            throw new \InvalidArgumentException('Missing the required parameter $message when calling postNewMessage');
+        }
+        $message = $input['message'];
+
+
+        return response('How about implementing postNewMessage as a post method ?');
+    }
+}
